[package]
name = "extractor" # TODO rename to gdpr-extractor
version = "0.1.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
fantoccini = "0.11.6"
futures = "0.1.14"
tokio = {version = "0.1", features = ["async-await-preview"]}
url = "1.7.2"
serde_json = "1.0.34"
tokio-retry = "0.2"
